Remove comments, fix warnings