@@ -6,24 +6,25 @@ import org.bukkit.World;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
+import org.jetbrains.annotations.NotNull;
 
 public class Noon implements CommandExecutor {
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
 
         if (!sender.hasPermission("oxygenated.time.noon")) {
             Msg.send(sender, "<red>You do not have permission.");
             return true;
         }
 
-        World world = Bukkit.getWorlds().get(0);
+        World world = Bukkit.getWorlds().getFirst();
         if (world == null) {
             Msg.send(sender, "<red>No world is loaded.");
             return true;
         }
 
-        world.setTime(6000L); // noon [web:9]
+        world.setTime(6000L);
         Msg.send(sender, "<green>Time set to <yellow>noon</yellow>.");
 
         return true;
